合并传送所有人的命令